jena-shex/src/test/files/spec/negativeSyntax/IRIREF-with-PN_LOCAL_ESC.shex
# IRIREF with PN_LOCAL_ESC
# source: turtle-syntax-bad-uri-05.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1\/> .
}
